# multi-langgraph-agent-system-on-a2a

./: .gitignore  CLAUDE.md
currency-agent/: CLAUDE.md  README.md  README_V2.md  pyproject.toml
currency-agent/src/currency_agent/: main.py
currency-agent/src/currency_agent/client/: test_client.py
currency-agent/src/currency_agent/common/: config.py  logging.py
currency-agent/src/currency_agent/core/: agent.py  state.py  tools.py
currency-agent/src/currency_agent/server/: models.py
orchestrator-agent/: .env.example  A2A_ORCHESTRATION_RESEARCH.md  A2A_Orchestration_Mindmap.html  CLAUDE.md  README.md  check_agents.py  install.sh  pyproject.toml  run_a2a_server.py  run_server.py  run_status_test.sh  run_test.sh  start_orchestrator.sh  task_id.txt  test_agent_messages.py  test_astream_events.py  test_astream_progress.py  test_client.py  test_complex_astream.py  test_direct_agent.py  test_dynamic_messages.py  test_event_flow.py  test_hotel_agent.py  test_import.py  test_polling_fix.py  test_progress_polling.py  test_realtime_progress.py  test_request.json  test_request2.json  test_simple.py  test_simple_messages.py  test_sse.py  test_sse_complex.py  test_sse_stream.py  test_status_updates.py
orchestrator-agent/src/orchestrator_agent/: __init__.py  main.py  main_v2.py
orchestrator-agent/src/orchestrator_agent/adapters/: __init__.py  a2a_executor.py  agent_discovery.py  langgraph_wrapper.py  orchestrator_agent_executor.py  orchestrator_executor.py
orchestrator-agent/src/orchestrator_agent/common/: __init__.py  config.py  exceptions.py  logging.py
orchestrator-agent/src/orchestrator_agent/core/: __init__.py  agent.py  prompts.py  state.py  tools.py
orchestrator-agent/src/orchestrator_agent/protocol/: __init__.py  agent_card_generator.py  message_handler.py  models.py  task_manager.py  validators.py
orchestrator-agent/src/orchestrator_agent/server/: __init__.py  a2a_app.py  app.py  app_v2.py  middleware.py  models.py  routes.py  simple_app.py  simple_routes.py  sse_routes.py  streaming_endpoints.py  streaming_handler.py
orchestrator-agent/src/orchestrator_agent/streaming/: __init__.py
orchestrator-agent/src/orchestrator_agent/subsystems/: __init__.py  checkpointing.py  protocol.py  streaming.py
time-agent/: .env.example  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  run_server.sh  test_a2a_message.py  test_response_format.py  test_server.py  test_server_health.py  test_simple.py
time-agent/examples/: run_server.py  test_queries.py
time-agent/src/time_agent/: main.py
time-agent/src/time_agent/adapters/: a2a_executor.py  langgraph_wrapper.py  state_translator.py  stream_converter.py
time-agent/src/time_agent/checkpointing/: __init__.py  a2a_checkpointer.py  memory_backend.py  state_synchronizer.py  storage_backend.py
time-agent/src/time_agent/client/: test_client.py
time-agent/src/time_agent/common/: config.py  exceptions.py  logging.py
time-agent/src/time_agent/core/: agent.py  prompts.py  state.py  tools.py
time-agent/src/time_agent/protocol/: __init__.py  (+5 more)
(+70 files in other folders)
